objects/LeadQaul_Field_Mapping__mdt.object
<CustomObject>
    <fields>
        <fullName>LeadQaul_Field_Name__c</fullName>
        <label>LeadQaul Field Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SF_Field_API__c</fullName>
        <label>SF Field API</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <label>LeadQaul Field Mapping</label>
    <pluralLabel>LeadQaul Field Mapping</pluralLabel>
</CustomObject>